--- a/display.html
+++ b/display.html
@@ -1,157 +1,178 @@
-<!-- 📱 六人用手機投資App前端雛形（含暱稱登入與自動建立帳號） -->
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>資安桌遊投資系統</title>
-  <script type="module">
-    // Firebase SDK
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, get, set, update, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>資安桌遊投資系統</title>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+      import {
+        getDatabase,
+        ref,
+        onValue,
+        set,
+        get,
+        update,
+      } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
-      authDomain: "broadgame-9bc04.firebaseapp.com",
-      databaseURL: "https://broadgame-9bc04-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "broadgame-9bc04",
-      storageBucket: "broadgame-9bc04.firebasestorage.app",
-      messagingSenderId: "220150025271",
-      appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
-      measurementId: "G-6T9GW9LVD7"
-    };
+      const firebaseConfig = {
+        apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
+        authDomain: "broadgame-9bc04.firebaseapp.com",
+        databaseURL:
+          "https://broadgame-9bc04-default-rtdb.asia-southeast1.firebasedatabase.app",
+        projectId: "broadgame-9bc04",
+        storageBucket: "broadgame-9bc04.appspot.com",
+        messagingSenderId: "220150025271",
+        appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
+        measurementId: "G-6T9GW9LVD7",
+      };
 
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const db = getDatabase(app);
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const db = getDatabase();
 
-    let currentUser = "";
+      let currentUser = "";
 
-    window.login = async function login() {
-      const name = document.getElementById("nickname").value.trim();
-      if (!name) return alert("請輸入暱稱！");
-      currentUser = name;
+      window.login = async function () {
+        const name = document.getElementById("nickname").value.trim();
+        if (!name) return alert("請輸入曉稱！");
+        currentUser = name;
+        const userRef = ref(db, `users/${name}`);
 
-      const userRef = ref(db, 'users/' + name);
-      const snapshot = await get(userRef);
-      if (!snapshot.exists()) {
-        await set(userRef, { money: 100 });
-      }
-
-      document.getElementById("login").style.display = "none";
-      document.getElementById("main").style.display = "block";
-      document.getElementById("playerName").textContent = name;
-
-      onValue(userRef, (snapshot) => {
-        const data = snapshot.val();
-        document.getElementById("money").textContent = `$${data.money}`;
-      });
-
-      const allUsersRef = ref(db, 'users/');
-      const allSnapshot = await get(allUsersRef);
-      const targetSelect = document.getElementById("target");
-      targetSelect.innerHTML = "";
-
-      allSnapshot.forEach(child => {
-        if (child.key !== name) {
-          const opt = document.createElement("option");
-          opt.value = child.key;
-          opt.textContent = child.key;
-          targetSelect.appendChild(opt);
+        const snapshot = await get(userRef);
+        if (!snapshot.exists()) {
+          await set(userRef, { money: 100 });
         }
-      });
 
-      document.getElementById("investSection").style.display = "block";
-    }
+        document.getElementById("login").style.display = "none";
+        document.getElementById("main").style.display = "block";
+        document.getElementById("playerName").textContent = name;
+        listenToBalance();
+        listenToPlayers();
+        document.getElementById("investSection").style.display = "block";
+      };
 
-    window.invest = async function invest() {
-      const target = document.getElementById("target").value;
-      const amount = parseInt(document.getElementById("amount").value);
-      const status = document.getElementById("status");
-
-      if (!target || isNaN(amount) || amount <= 0) {
-        status.textContent = "請選擇對象並輸入有效金額。";
-        return;
+      function listenToBalance() {
+        const moneyRef = ref(db, `users/${currentUser}/money`);
+        onValue(moneyRef, (snapshot) => {
+          document.getElementById("money").textContent = `$${snapshot.val()}`;
+        });
       }
 
-      const userRef = ref(db, 'users/' + currentUser);
-      const targetRef = ref(db, 'users/' + target);
-      const [userSnap, targetSnap] = await Promise.all([get(userRef), get(targetRef)]);
-      const userData = userSnap.val();
-      const targetData = targetSnap.val();
+      function listenToPlayers() {
+        const usersRef = ref(db, "users");
+        onValue(usersRef, (snapshot) => {
+          const players = snapshot.val();
+          const targetSelect = document.getElementById("target");
+          targetSelect.innerHTML = "";
 
-      if (amount > userData.money) {
-        status.textContent = "你的錢不夠啦！";
-        return;
+          for (let name in players) {
+            if (name !== currentUser) {
+              const opt = document.createElement("option");
+              opt.value = name;
+              opt.textContent = name;
+              targetSelect.appendChild(opt);
+            }
+          }
+        });
       }
 
-      await update(userRef, { money: userData.money - amount });
-      await update(targetRef, { money: (targetData.money || 0) + amount });
+      window.invest = async function () {
+        const target = document.getElementById("target").value;
+        const amount = parseInt(document.getElementById("amount").value);
+        const status = document.getElementById("status");
 
-      status.textContent = `✅ 你已成功投資 ${target} $${amount}`;
-    }
-  </script>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 1.5rem;
-      background: #f0f0f0;
-      max-width: 480px;
-      margin: auto;
-    }
-    .card {
-      background: white;
-      padding: 1.2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 1.5rem;
-    }
-    select, input {
-      width: 100%;
-      padding: 0.6rem;
-      font-size: 1rem;
-      margin-top: 0.5rem;
-      margin-bottom: 1rem;
-    }
-    button {
-      width: 100%;
-      padding: 0.8rem;
-      background: #1e88e5;
-      color: white;
-      border: none;
-      font-size: 1.1rem;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #1565c0;
-    }
-    #main, #investSection { display: none; }
-  </style>
-</head>
-<body>
-  <div class="card" id="login">
-    <h2>請輸入你的暱稱</h2>
-    <input type="text" id="nickname" placeholder="例如：Alan">
-    <button onclick="login()">登入遊戲</button>
-  </div>
+        if (!target || isNaN(amount) || amount <= 0) {
+          status.textContent = "請選擇對象並輸入有效金額。";
+          return;
+        }
 
-  <div id="main">
-    <div class="card">
-      <h2>玩家：<span id="playerName"></span></h2>
-      <p>💰 我的餘額：<strong id="money">$0</strong></p>
+        const userRef = ref(db, `users/${currentUser}/money`);
+        const snapshot = await get(userRef);
+        const currentMoney = snapshot.val();
+
+        if (amount > currentMoney) {
+          status.textContent = "你的錢不夠啦！";
+          return;
+        }
+
+        await update(ref(db, `users/${currentUser}`), { money: currentMoney - amount });
+
+        const targetRef = ref(db, `users/${target}/money`);
+        const targetSnap = await get(targetRef);
+        const targetMoney = targetSnap.exists() ? targetSnap.val() : 0;
+
+        await update(ref(db, `users/${target}`), { money: targetMoney + amount });
+        status.textContent = `✅ 你已成功投資 ${target} $${amount}`;
+      };
+    </script>
+    <style>
+      body {
+        font-family: sans-serif;
+        padding: 1.5rem;
+        background: #f0f0f0;
+        max-width: 480px;
+        margin: auto;
+      }
+      .card {
+        background: white;
+        padding: 1.2rem;
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        margin-bottom: 1.5rem;
+      }
+      select,
+      input {
+        width: 100%;
+        padding: 0.6rem;
+        font-size: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+      }
+      button {
+        width: 100%;
+        padding: 0.8rem;
+        background: #1e88e5;
+        color: white;
+        border: none;
+        font-size: 1.1rem;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #1565c0;
+      }
+      #main,
+      #investSection {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="card" id="login">
+      <h2>請輸入你的曉稱</h2>
+      <input type="text" id="nickname" placeholder="例如：Alan" />
+      <button onclick="login()">登入遊戲</button>
     </div>
 
-    <div class="card" id="investSection">
-      <h3>我要投資：</h3>
-      <label for="target">選擇對象：</label>
-      <select id="target"></select>
-      <label for="amount">投資金額：</label>
-      <input type="number" id="amount" placeholder="輸入金額，如20" min="1">
-      <button onclick="invest()">確認投資</button>
-      <p id="status"></p>
+    <div id="main">
+      <div class="card">
+        <h2>玩家：<span id="playerName"></span></h2>
+        <p>💰 我的餘額：<strong id="money">$0</strong></p>
+      </div>
+
+      <div class="card" id="investSection">
+        <h3>我要投資：</h3>
+        <label for="target">選擇對象：</label>
+        <select id="target"></select>
+
+        <label for="amount">投資金額：</label>
+        <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
+
+        <button onclick="invest()">確認投資</button>
+        <p id="status"></p>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
