--- a/display.html
+++ b/display.html
@@ -1,178 +1,107 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>資安桌遊投資系統</title>
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
-      import {
-        getDatabase,
-        ref,
-        onValue,
-        set,
-        get,
-        update,
-      } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>資安桌遊房間系統</title>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getDatabase, ref, set, get, onValue, update } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
-        authDomain: "broadgame-9bc04.firebaseapp.com",
-        databaseURL:
-          "https://broadgame-9bc04-default-rtdb.asia-southeast1.firebasedatabase.app",
-        projectId: "broadgame-9bc04",
-        storageBucket: "broadgame-9bc04.appspot.com",
-        messagingSenderId: "220150025271",
-        appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
-        measurementId: "G-6T9GW9LVD7",
-      };
+    const firebaseConfig = {
+      apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
+      authDomain: "broadgame-9bc04.firebaseapp.com",
+      databaseURL: "https://broadgame-9bc04-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "broadgame-9bc04",
+      storageBucket: "broadgame-9bc04.appspot.com",
+      messagingSenderId: "220150025271",
+      appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
+      measurementId: "G-6T9GW9LVD7"
+    };
 
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
-      const db = getDatabase();
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase();
 
-      let currentUser = "";
+    let currentUser = "";
+    let currentRoom = "";
 
-      window.login = async function () {
-        const name = document.getElementById("nickname").value.trim();
-        if (!name) return alert("請輸入曉稱！");
-        currentUser = name;
-        const userRef = ref(db, `users/${name}`);
+    window.login = () => {
+      const name = document.getElementById("nickname").value.trim();
+      if (!name) return alert("請輸入暱稱！");
+      currentUser = name;
+      document.getElementById("login").style.display = "none";
+      document.getElementById("lobby").style.display = "block";
+    };
 
-        const snapshot = await get(userRef);
-        if (!snapshot.exists()) {
-          await set(userRef, { money: 100 });
-        }
+    window.createRoom = async () => {
+      const roomCode = Math.floor(1000 + Math.random() * 9000).toString();
+      await set(ref(db, `rooms/${roomCode}`), {
+        host: currentUser,
+        players: { [currentUser]: true },
+        started: false
+      });
+      joinRoom(roomCode);
+    };
 
-        document.getElementById("login").style.display = "none";
-        document.getElementById("main").style.display = "block";
-        document.getElementById("playerName").textContent = name;
-        listenToBalance();
-        listenToPlayers();
-        document.getElementById("investSection").style.display = "block";
-      };
+    window.joinRoom = async (code = null) => {
+      if (!code) code = document.getElementById("roomCode").value.trim();
+      const roomRef = ref(db, `rooms/${code}`);
+      const snapshot = await get(roomRef);
 
-      function listenToBalance() {
-        const moneyRef = ref(db, `users/${currentUser}/money`);
-        onValue(moneyRef, (snapshot) => {
-          document.getElementById("money").textContent = `$${snapshot.val()}`;
-        });
+      if (!snapshot.exists()) return alert("房間不存在！");
+
+      currentRoom = code;
+      update(ref(db, `rooms/${code}/players`), { [currentUser]: true });
+
+      document.getElementById("lobby").style.display = "none";
+      document.getElementById("room").style.display = "block";
+      document.getElementById("roomNumber").textContent = code;
+
+      const playersRef = ref(db, `rooms/${code}/players`);
+      onValue(playersRef, (snap) => {
+        const players = Object.keys(snap.val() || {});
+        document.getElementById("playerList").textContent = players.join(", ");
+      });
+
+      const roomData = snapshot.val();
+      if (roomData.host === currentUser) {
+        document.getElementById("startBtn").style.display = "block";
       }
+    };
 
-      function listenToPlayers() {
-        const usersRef = ref(db, "users");
-        onValue(usersRef, (snapshot) => {
-          const players = snapshot.val();
-          const targetSelect = document.getElementById("target");
-          targetSelect.innerHTML = "";
+    window.startGame = () => {
+      update(ref(db, `rooms/${currentRoom}`), { started: true });
+      alert("遊戲開始囉！（你可以轉跳到主遊戲頁）");
+    }
+  </script>
+  <style>
+    body { font-family: sans-serif; padding: 1rem; max-width: 480px; margin: auto; background: #f4f4f4; }
+    .card { background: white; padding: 1.2rem; margin-bottom: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    button, input { width: 100%; padding: 0.8rem; font-size: 1rem; margin-top: 1rem; }
+    #lobby, #room { display: none; }
+    #startBtn { display: none; background: green; color: white; }
+  </style>
+</head>
+<body>
+  <div class="card" id="login">
+    <h2>輸入暱稱進入遊戲</h2>
+    <input type="text" id="nickname" placeholder="輸入暱稱">
+    <button onclick="login()">登入</button>
+  </div>
 
-          for (let name in players) {
-            if (name !== currentUser) {
-              const opt = document.createElement("option");
-              opt.value = name;
-              opt.textContent = name;
-              targetSelect.appendChild(opt);
-            }
-          }
-        });
-      }
-
-      window.invest = async function () {
-        const target = document.getElementById("target").value;
-        const amount = parseInt(document.getElementById("amount").value);
-        const status = document.getElementById("status");
-
-        if (!target || isNaN(amount) || amount <= 0) {
-          status.textContent = "請選擇對象並輸入有效金額。";
-          return;
-        }
-
-        const userRef = ref(db, `users/${currentUser}/money`);
-        const snapshot = await get(userRef);
-        const currentMoney = snapshot.val();
-
-        if (amount > currentMoney) {
-          status.textContent = "你的錢不夠啦！";
-          return;
-        }
-
-        await update(ref(db, `users/${currentUser}`), { money: currentMoney - amount });
-
-        const targetRef = ref(db, `users/${target}/money`);
-        const targetSnap = await get(targetRef);
-        const targetMoney = targetSnap.exists() ? targetSnap.val() : 0;
-
-        await update(ref(db, `users/${target}`), { money: targetMoney + amount });
-        status.textContent = `✅ 你已成功投資 ${target} $${amount}`;
-      };
-    </script>
-    <style>
-      body {
-        font-family: sans-serif;
-        padding: 1.5rem;
-        background: #f0f0f0;
-        max-width: 480px;
-        margin: auto;
-      }
-      .card {
-        background: white;
-        padding: 1.2rem;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        margin-bottom: 1.5rem;
-      }
-      select,
-      input {
-        width: 100%;
-        padding: 0.6rem;
-        font-size: 1rem;
-        margin-top: 0.5rem;
-        margin-bottom: 1rem;
-      }
-      button {
-        width: 100%;
-        padding: 0.8rem;
-        background: #1e88e5;
-        color: white;
-        border: none;
-        font-size: 1.1rem;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #1565c0;
-      }
-      #main,
-      #investSection {
-        display: none;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="card" id="login">
-      <h2>請輸入你的曉稱</h2>
-      <input type="text" id="nickname" placeholder="例如：Alan" />
-      <button onclick="login()">登入遊戲</button>
+  <div id="lobby">
+    <div class="card">
+      <h2>創立或加入房間</h2>
+      <button onclick="createRoom()">➕ 創立新房間</button>
+      <input type="text" id="roomCode" placeholder="輸入房間代碼">
+      <button onclick="joinRoom()">加入房間</button>
     </div>
+  </div>
 
-    <div id="main">
-      <div class="card">
-        <h2>玩家：<span id="playerName"></span></h2>
-        <p>💰 我的餘額：<strong id="money">$0</strong></p>
-      </div>
-
-      <div class="card" id="investSection">
-        <h3>我要投資：</h3>
-        <label for="target">選擇對象：</label>
-        <select id="target"></select>
-
-        <label for="amount">投資金額：</label>
-        <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
-
-        <button onclick="invest()">確認投資</button>
-        <p id="status"></p>
-      </div>
-    </div>
-  </body>
+  <div class="card" id="room">
+    <h2>房間代碼：<span id="roomNumber"></span></h2>
+    <p>目前玩家：<span id="playerList">-</span></p>
+    <button id="startBtn" onclick="startGame()">✅ 開始遊戲</button>
+  </div>
+</body>
 </html>
