--- a/lobby.html
+++ b/lobby.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>資安桌遊大廳</title>
+  <title>資安桌遊房間系統</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, set, get, update, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+    import { getDatabase, ref, set, get, onValue, update } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
@@ -32,7 +32,6 @@
       currentUser = name;
       document.getElementById("login").style.display = "none";
       document.getElementById("lobby").style.display = "block";
-      document.getElementById("userNameDisplay").textContent = name;
     };
 
     window.createRoom = async () => {
@@ -43,62 +42,119 @@
         started: false
       });
       isHost = true;
-      currentRoom = roomCode;
-      enterRoom(roomCode);
+      joinRoom(roomCode);
     };
 
-    window.joinRoom = async () => {
-      const code = document.getElementById("roomCode").value.trim();
-      if (!code) return alert("請輸入房號");
+    window.joinRoom = async (code = null) => {
+      if (!code) code = document.getElementById("roomCode").value.trim();
       const roomRef = ref(db, `rooms/${code}`);
       const snapshot = await get(roomRef);
+
       if (!snapshot.exists()) return alert("房間不存在！");
 
       currentRoom = code;
       await update(ref(db, `rooms/${code}/players`), { [currentUser]: true });
-      enterRoom(code);
-    };
 
-    function enterRoom(code) {
       document.getElementById("lobby").style.display = "none";
-      document.getElementById("roomLobby").style.display = "block";
-      document.getElementById("roomCodeDisplay").textContent = code;
+      document.getElementById("room").style.display = "block";
+      document.getElementById("roomNumber").textContent = code;
 
       const playersRef = ref(db, `rooms/${code}/players`);
       onValue(playersRef, (snap) => {
-        const players = snap.val();
-        const list = document.getElementById("playerList");
-        list.innerHTML = "";
-        for (let name in players) {
-          const li = document.createElement("li");
-          li.textContent = name;
-          list.appendChild(li);
-        }
+        const players = Object.keys(snap.val() || {});
+        document.getElementById("playerList").textContent = players.join(", ");
       });
 
-      const gameStateRef = ref(db, `rooms/${code}/started`);
-      onValue(gameStateRef, (snap) => {
-        if (snap.exists() && snap.val() === true) {
-          const url = `game.html?room=${code}&user=${encodeURIComponent(currentUser)}`;
-          window.location.href = url;
-        }
-      });
-
-      if (isHost) {
+      const roomData = snapshot.val();
+      if (roomData.host === currentUser) {
         document.getElementById("startBtn").style.display = "block";
       }
-    }
+    };
 
     window.startGame = async () => {
       await update(ref(db, `rooms/${currentRoom}`), { started: true });
+      alert("遊戲開始囉！進入主遊戲畫面");
+      launchMainGame();
+    };
+
+    function launchMainGame() {
+      document.getElementById("room").style.display = "none";
+      document.getElementById("main").style.display = "block";
+      document.getElementById("playerName").textContent = currentUser;
+      setupGame(currentUser);
+    }
+
+    function setupGame(name) {
+      const userRef = ref(db, `users/${name}`);
+      get(userRef).then(snapshot => {
+        if (!snapshot.exists()) {
+          set(userRef, { money: 100 });
+        }
+        listenToBalance();
+        listenToPlayers();
+      });
+    }
+
+    function listenToBalance() {
+      const moneyRef = ref(db, `users/${currentUser}/money`);
+      onValue(moneyRef, (snapshot) => {
+        document.getElementById("money").textContent = `$${snapshot.val()}`;
+      });
+    }
+
+    function listenToPlayers() {
+      const usersRef = ref(db, "users");
+      onValue(usersRef, (snapshot) => {
+        const players = snapshot.val();
+        const targetSelect = document.getElementById("target");
+        targetSelect.innerHTML = "";
+
+        for (let name in players) {
+          if (name !== currentUser) {
+            const opt = document.createElement("option");
+            opt.value = name;
+            opt.textContent = name;
+            targetSelect.appendChild(opt);
+          }
+        }
+      });
+    }
+
+    window.invest = async function () {
+      const target = document.getElementById("target").value;
+      const amount = parseInt(document.getElementById("amount").value);
+      const status = document.getElementById("status");
+
+      if (!target || isNaN(amount) || amount <= 0) {
+        status.textContent = "請選擇對象並輸入有效金額。";
+        return;
+      }
+
+      const userRef = ref(db, `users/${currentUser}/money`);
+      const snapshot = await get(userRef);
+      const currentMoney = snapshot.val();
+
+      if (amount > currentMoney) {
+        status.textContent = "你的錢不夠啦！";
+        return;
+      }
+
+      await update(ref(db, `users/${currentUser}`), { money: currentMoney - amount });
+
+      const targetRef = ref(db, `users/${target}/money`);
+      const targetSnap = await get(targetRef);
+      const targetMoney = targetSnap.exists() ? targetSnap.val() : 0;
+
+      await update(ref(db, `users/${target}`), { money: targetMoney + amount });
+      status.textContent = `✅ 你已成功投資 ${target} $${amount}`;
     };
   </script>
   <style>
     body { font-family: sans-serif; padding: 1rem; max-width: 480px; margin: auto; background: #f4f4f4; }
     .card { background: white; padding: 1.2rem; margin-bottom: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    button, input { width: 100%; padding: 0.8rem; font-size: 1rem; margin-top: 0.5rem; }
-    #lobby, #roomLobby { display: none; }
-    #startBtn { background-color: green; color: white; }
+    button, input, select { width: 100%; padding: 0.8rem; font-size: 1rem; margin-top: 0.5rem; margin-bottom: 0.5rem; }
+    #lobby, #room, #main { display: none; }
+    #startBtn { display: none; background: green; color: white; }
   </style>
 </head>
 <body>
@@ -108,17 +164,31 @@
     <button onclick="login()">登入</button>
   </div>
 
-  <div class="card" id="lobby">
-    <h2>歡迎，<span id="userNameDisplay"></span></h2>
-    <button onclick="createRoom()">創立房間</button>
-    <input type="text" id="roomCode" placeholder="輸入房號加入房間">
-    <button onclick="joinRoom()">加入房間</button>
+  <div id="lobby">
+    <div class="card">
+      <h2>創立或加入房間</h2>
+      <button onclick="createRoom()">➕ 創立新房間</button>
+      <input type="text" id="roomCode" placeholder="輸入房間代碼">
+      <button onclick="joinRoom()">加入房間</button>
+    </div>
   </div>
 
-  <div class="card" id="roomLobby">
-    <h2>房間號碼：<span id="roomCodeDisplay"></span></h2>
-    <ul id="playerList"></ul>
-    <button id="startBtn" style="display:none" onclick="startGame()">✅ 開始遊戲</button>
+  <div class="card" id="room">
+    <h2>房間代碼：<span id="roomNumber"></span></h2>
+    <p>目前玩家：<span id="playerList">-</span></p>
+    <button id="startBtn" onclick="startGame()">✅ 開始遊戲</button>
+  </div>
+
+  <div class="card" id="main">
+    <h2>玩家：<span id="playerName"></span></h2>
+    <p>💰 我的餘額：<strong id="money">$0</strong></p>
+    <h3>我要投資：</h3>
+    <label for="target">選擇對象：</label>
+    <select id="target"></select>
+    <label for="amount">投資金額：</label>
+    <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
+    <button onclick="invest()">確認投資</button>
+    <p id="status"></p>
   </div>
 </body>
 </html>
