--- a/lobby.html
+++ b/lobby.html
@@ -170,7 +170,7 @@
 </head>
 <body>
   <div class="card" id="login">
-    <h2>輸入暱稱進入遊戲</h2>
+    <h2>輸入暱稱</h2>
     <input type="text" id="nickname" placeholder="輸入暱稱">
     <button onclick="login()">登入</button>
   </div>
