--- a/game.html
+++ b/game.html
@@ -4,6 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>資安桌遊主畫面</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 1rem;
+      max-width: 480px;
+      margin: auto;
+      background: #f4f4f4;
+    }
+    .card {
+      background: white;
+      padding: 1.2rem;
+      margin-bottom: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    button, input, select {
+      width: 100%;
+      padding: 0.8rem;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+  </style>
+</head>
+<body>
+  <!-- 玩家基本資訊 -->
+  <div class="card">
+    <h2>玩家：<span id="playerName"></span></h2>
+    <p>💰 我的餘額：<strong id="money">$0</strong></p>
+  </div>
+
+  <!-- 動態角色專屬操作區塊 -->
+  <div id="roleActions" class="card"></div>
+
+  <!-- 所有人通用的投資功能 -->
+  <div class="card">
+    <h3>我要投資：</h3>
+    <label for="target">選擇對象：</label>
+    <select id="target"></select>
+
+    <label for="amount">投資金額：</label>
+    <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
+
+    <button onclick="invest()">確認投資</button>
+    <p id="status"></p>
+  </div>
+
+  <!-- 🔧 邏輯腳本 -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getDatabase, ref, set, get, onValue, update } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
@@ -23,17 +71,15 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase();
 
-    // ✅ URL 參數
+    // ✅ 擷取 URL 參數
     const urlParams = new URLSearchParams(window.location.search);
     const currentRoom = urlParams.get('room');
     const currentUser = urlParams.get('player');
 
-    // ✅ 玩家名稱顯示
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementById("playerName").textContent = currentUser;
-    });
+    // ✅ 顯示玩家暱稱
+    document.getElementById("playerName").textContent = currentUser;
 
-    // ✅ 初始金額設定
+    // ✅ 初始化玩家金額
     const userRef = ref(db, `rooms/${currentRoom}/players/${currentUser}`);
     get(userRef).then(snapshot => {
       if (!snapshot.exists()) {
@@ -41,13 +87,13 @@
       }
     });
 
-    // ✅ 監聽金額變化
+    // ✅ 金額即時監聽
     const moneyRef = ref(db, `rooms/${currentRoom}/players/${currentUser}/money`);
     onValue(moneyRef, (snap) => {
-      document.getElementById("money").textContent = `$${snap.val()}`;
+      document.getElementById("money").textContent = `$${snap.val() || 0}`;
     });
 
-    // ✅ 顯示投資對象
+    // ✅ 取得其他投資對象名單（排除自己）
     const allPlayersRef = ref(db, `rooms/${currentRoom}/players`);
     onValue(allPlayersRef, (snap) => {
       const all = snap.val();
@@ -74,53 +120,32 @@
         return;
       }
 
-      const userSnap = await get(ref(db, `rooms/${currentRoom}/players/${currentUser}/money`));
-      const balance = userSnap.val();
+      const userMoneySnap = await get(ref(db, `rooms/${currentRoom}/players/${currentUser}/money`));
+      const balance = userMoneySnap.val() || 0;
       if (amount > balance) {
         status.textContent = "你的錢不夠啦！";
         return;
       }
 
-      // 更新投資金額
+      // ✅ 扣除自己金額
       await update(ref(db, `rooms/${currentRoom}/players/${currentUser}`), { money: balance - amount });
+
+      // ✅ 加到目標玩家帳戶 + 投資記錄
       const targetRef = ref(db, `rooms/${currentRoom}/players/${target}`);
       const targetSnap = await get(targetRef);
       const targetMoney = targetSnap.exists() ? targetSnap.val().money : 0;
+      const previousInvestment = (targetSnap.val()?.investors?.[currentUser]) || 0;
+
       await update(targetRef, {
         money: targetMoney + amount,
-        [`investors/${currentUser}`]: amount
+        [`investors/${currentUser}`]: previousInvestment + amount
       });
 
       status.textContent = `✅ 成功投資 ${target} $${amount}`;
     }
 
-    // ✅ 渲染角色功能
+    // ✅ 顯示角色專屬介面
     renderRoleUI(currentUser, currentRoom);
   </script>
-  <style>
-    body { font-family: sans-serif; padding: 1rem; max-width: 480px; margin: auto; background: #f4f4f4; }
-    .card { background: white; padding: 1.2rem; margin-bottom: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    button, input, select { width: 100%; padding: 0.8rem; font-size: 1rem; margin-top: 0.5rem; margin-bottom: 0.5rem; }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h2>玩家：<span id="playerName"></span></h2>
-    <p>💰 我的餘額：<strong id="money">$0</strong></p>
-  </div>
-
-  <div id="roleActions"></div>
-
-  <div class="card">
-    <h3>我要投資：</h3>
-    <label for="target">選擇對象：</label>
-    <select id="target"></select>
-
-    <label for="amount">投資金額：</label>
-    <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
-
-    <button onclick="invest()">確認投資</button>
-    <p id="status"></p>
-  </div>
 </body>
 </html>
